<resources>
    <string name="app_name">Polar Heartrate Monitor</string>
    <string name="start_ecg_stream">Start ECG Stream</string>
    <string name="stop_ecg_stream">Stop ECG Stream</string>
    <string name="start_acc_stream">Start ACC Stream</string>
    <string name="stop_acc_stream">Stop ACC Stream</string>
    <string name="start_gyro_stream">Start GYRO Stream</string>
    <string name="stop_gyro_stream">Stop GYRO Stream</string>
    <string name="start_mag_stream">Start Magnetometer Stream</string>
    <string name="stop_mag_stream">Stop Magnetometer Stream</string>
    <string name="start_ppg_stream">Start PPG Stream</string>
    <string name="stop_ppg_stream">Stop PPG Stream</string>
    <string name="start_ppi_stream">Start PPI Stream</string>
    <string name="stop_ppi_stream">Stop PPI Stream</string>
    <string name="enable_sdk_mode">Enable SDK mode</string>
    <string name="disable_sdk_mode">Disable SDK mode</string>
    <string name="listen_broadcast">Listen broadcast</string>
    <string name="listening_broadcast">Listening broadcast</string>
    <string name="connect_to_device">Connect to %s</string>
    <string name="disconnect_from_device">Disconnect from %s</string>
    <string name="auto_connect_toggle">Auto connect</string>
    <string name="scan_devices">scan devices</string>
    <string name="scanning_devices">stop device scan</string>
    <string name="list_exercises">list exercises</string>
    <string name="read_exercise">read exercise</string>
    <string name="remove_exercise">remove exercise</string>
    <string name="start_h10_recording">Start H10 recording</string>
    <string name="stop_h10_recording">Stop H10 recording</string>
    <string name="h10_recording_status">H10 recording status</string>
    <string name="set_time">Set time</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="channels">Channels</string>
    <string name="ok">OK</string>
    <string name="monitor_training_hr">monitor training HR</string>
    <string name="set_training_hr">set training HR</string>
    <string name="training_heartrate">training Heartrate:</string>
    <string name="current_heartrate">current Heartrate:</string>
    <string name="heartrate">Heartrate</string>
    <string name="start_recording">start recording</string>
    <string name="stop_recording">stop recording</string>
    <string name="current_activity">previous Activity</string>
    <string name="average_heartrate">average Heartrate:</string>
    <string name="max_heartrate">max Heartrate:</string>
    <string name="min_heartrate">min Heartrate:</string>
</resources>
