<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polar.androidblesdk.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/broadcast_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listen_broadcast"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/auto_connect_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auto_connect_toggle" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/scan_devices" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_device" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="5pt"
            android:paddingEnd="5pt">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:editable="false"
                android:text="@string/current_heartrate"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/heartrateTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/heartrate"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="5pt"
            android:paddingEnd="5pt">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:editable="false"
                android:text="@string/training_heartrate"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/targetHeartrateTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/setTrainingHeartrateButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/set_training_hr" />

            <Button
                android:id="@+id/monitorTrainingHeartrateButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/monitor_training_hr" />
        </LinearLayout>

        <Button
            android:id="@+id/recordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_recording" />

        <TextView
            android:id="@+id/segmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_activity"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="5pt"
            android:paddingEnd="5pt">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/average_heartrate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/averageHeartrate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="5pt"
            android:paddingEnd="5pt">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/max_heartrate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/maxHeartrate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="5pt"
            android:paddingEnd="5pt">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/min_heartrate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/minHeartrate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/ecg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ecg_stream"
            android:visibility="gone" />

        <Button
            android:id="@+id/acc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_acc_stream"
            android:visibility="gone" />

        <Button
            android:id="@+id/gyr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_gyro_stream"
            android:visibility="gone" />

        <Button
            android:id="@+id/mag_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_mag_stream"
            android:visibility="gone" />

        <Button
            android:id="@+id/ohr_ppg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ppg_stream"
            android:visibility="gone" />

        <Button
            android:id="@+id/ohr_ppi_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ppi_stream"
            android:visibility="gone" />

        <Button
            android:id="@+id/toggle_SDK_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_sdk_mode"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/list_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_exercises" />

        <Button
            android:id="@+id/read_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_exercise" />

        <Button
            android:id="@+id/remove_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_exercise" />

        <Button
            android:id="@+id/start_h10_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_h10_recording"
            android:visibility="gone" />

        <Button
            android:id="@+id/stop_h10_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_h10_recording"
            android:visibility="gone" />

        <Button
            android:id="@+id/h10_recording_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h10_recording_status"
            android:visibility="gone" />

        <Button
            android:id="@+id/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>